<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/change_language"
        android:icon="@drawable/ic_lang"
        android:iconTint="@color/black"
        android:title="@string/change_language"
        app:showAsAction="never" />

    <item
        android:id="@+id/see_maps"
        android:icon="@drawable/ic_map"
        android:iconTint="@color/black"
        android:title="@string/see_maps"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:iconTint="@color/black"
        android:title="@string/logout"
        app:showAsAction="never" />


</menu>